PR29262, memory leak in pr_function_type

PR 29262
	* prdbg.c (pr_function_type): Free "s" on failure path.